[package]
name = "cart"
version = "0.1.0"
edition = "2021"
authors = ["Sander in 't Veld <sanderintveld@hotmail.com>"]
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }

[profile.release]
opt-level = "z"
lto = true

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
